--- a/arch/arm64/configs/mt_connect_defconfig
+++ b/arch/arm64/configs/mt_connect_defconfig
@@ -1,6 +1,5 @@
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
-CONFIG_AUDIT=y
 CONFIG_NO_HZ_IDLE=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BPF_SYSCALL=y
@@ -52,6 +51,7 @@ CONFIG_PM_DEBUG=y
 CONFIG_PM_TEST_SUSPEND=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ENERGY_MODEL=y
+CONFIG_CPU_IDLE=y
 CONFIG_ARM_PSCI_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
@@ -61,16 +61,10 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPUFREQ_DT=y
-CONFIG_ACPI_CPPC_CPUFREQ=m
 CONFIG_ARM_SCPI_CPUFREQ=y
 CONFIG_ARM_IMX_CPUFREQ_DT=y
 CONFIG_ARM_SCMI_CPUFREQ=y
 CONFIG_QORIQ_CPUFREQ=y
-CONFIG_ACPI=y
-CONFIG_ACPI_APEI=y
-CONFIG_ACPI_APEI_GHES=y
-CONFIG_ACPI_APEI_MEMORY_FAILURE=y
-CONFIG_ACPI_APEI_EINJ=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
 CONFIG_JUMP_LABEL=y
@@ -82,6 +76,7 @@ CONFIG_MODVERSIONS=y
 CONFIG_KSM=y
 CONFIG_MEMORY_FAILURE=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_CMA=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_TLS=y
@@ -134,6 +129,8 @@ CONFIG_BRIDGE_NF_EBTABLES=m
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_VLAN_FILTERING=y
 CONFIG_NET_DSA=m
+CONFIG_NET_DSA_TAG_OCELOT=m
+CONFIG_NET_DSA_TAG_OCELOT_8021Q=m
 CONFIG_VLAN_8021Q_GVRP=y
 CONFIG_VLAN_8021Q_MVRP=y
 CONFIG_LLC2=y
@@ -161,58 +158,8 @@ CONFIG_QRTR_SMD=m
 CONFIG_QRTR_TUN=m
 CONFIG_NET_PKTGEN=m
 CONFIG_CAN=m
-CONFIG_BT=y
-CONFIG_BT_RFCOMM=y
-CONFIG_BT_RFCOMM_TTY=y
-CONFIG_BT_BNEP=y
-CONFIG_BT_BNEP_MC_FILTER=y
-CONFIG_BT_BNEP_PROTO_FILTER=y
-CONFIG_BT_HIDP=y
-CONFIG_BT_LEDS=y
-# CONFIG_BT_DEBUGFS is not set
-CONFIG_BT_HCIBTUSB=m
-CONFIG_BT_HCIUART=y
-CONFIG_BT_HCIUART_BCSP=y
-CONFIG_BT_HCIUART_ATH3K=y
-CONFIG_BT_HCIUART_LL=y
-CONFIG_BT_HCIUART_3WIRE=y
-CONFIG_BT_HCIUART_BCM=y
-CONFIG_BT_HCIUART_QCA=y
-CONFIG_BT_HCIVHCI=y
-CONFIG_BT_NXPUART=m
-CONFIG_CFG80211=y
-CONFIG_NL80211_TESTMODE=y
-CONFIG_CFG80211_WEXT=y
-CONFIG_MAC80211=y
-CONFIG_MAC80211_LEDS=y
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
-CONFIG_NFC=m
-CONFIG_NFC_NCI=m
-CONFIG_NFC_S3FWRN5_I2C=m
-CONFIG_PCI=y
-CONFIG_PCIEPORTBUS=y
-CONFIG_PCI_IOV=y
-CONFIG_PCI_PASID=y
-CONFIG_HOTPLUG_PCI=y
-CONFIG_HOTPLUG_PCI_ACPI=y
-CONFIG_PCIE_ALTERA=y
-CONFIG_PCIE_ALTERA_MSI=y
-CONFIG_PCI_HOST_THUNDER_PEM=y
-CONFIG_PCI_HOST_THUNDER_ECAM=y
-CONFIG_PCI_HOST_GENERIC=y
-CONFIG_PCI_XGENE=y
-CONFIG_PCI_NXP_RPMSG=y
-CONFIG_PCI_MESON=m
-CONFIG_PCI_IMX6_HOST=y
-CONFIG_PCI_IMX6_EP=y
-CONFIG_PCI_LAYERSCAPE=y
-CONFIG_PCI_HISI=y
-CONFIG_PCIE_KIRIN=y
-CONFIG_PCIE_LAYERSCAPE_GEN4=y
-CONFIG_PCI_ENDPOINT=y
-CONFIG_PCI_ENDPOINT_CONFIGFS=y
-CONFIG_PCI_EPF_TEST=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_FW_LOADER_USER_HELPER=y
@@ -231,8 +178,6 @@ CONFIG_IMX_SCU=y
 CONFIG_IMX_SCU_PD=y
 CONFIG_IMX_SEC_ENCLAVE=y
 CONFIG_IMX_ISPMU=m
-CONFIG_GNSS=m
-CONFIG_GNSS_MTK_SERIAL=m
 CONFIG_MTD=y
 CONFIG_MTD_CMDLINE_PARTS=y
 CONFIG_MTD_BLOCK=y
@@ -252,30 +197,25 @@ CONFIG_MTD_SPI_NAND=y
 CONFIG_MTD_SPI_NOR=y
 # CONFIG_MTD_SPI_NOR_USE_4K_SECTORS is not set
 CONFIG_MTD_UBI=y
+CONFIG_OF_OVERLAY=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_NBD=m
 CONFIG_XEN_BLKDEV_BACKEND=m
 CONFIG_VIRTIO_BLK=y
-CONFIG_BLK_DEV_NVME=y
 CONFIG_SRAM=y
-CONFIG_PCI_ENDPOINT_TEST=y
 CONFIG_EEPROM_AT24=m
 CONFIG_EEPROM_AT25=m
 CONFIG_UACCE=m
+CONFIG_RAID_ATTRS=m
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
 CONFIG_SCSI_SAS_ATA=y
 CONFIG_SCSI_HISI_SAS=y
-CONFIG_SCSI_HISI_SAS_PCI=y
-CONFIG_MEGARAID_SAS=y
-CONFIG_SCSI_MPT3SAS=m
 CONFIG_ATA=y
-CONFIG_SATA_AHCI=y
 CONFIG_SATA_AHCI_PLATFORM=y
 CONFIG_AHCI_IMX=y
 CONFIG_AHCI_CEVA=y
 CONFIG_AHCI_QORIQ=y
-CONFIG_SATA_SIL24=y
 CONFIG_PATA_OF_PLATFORM=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_MD=m
@@ -289,18 +229,14 @@ CONFIG_MACVTAP=m
 CONFIG_TUN=y
 CONFIG_VETH=m
 CONFIG_VIRTIO_NET=y
-CONFIG_NET_DSA_MSCC_FELIX=m
 CONFIG_NET_DSA_SJA1105=m
 CONFIG_NET_DSA_SJA1105_PTP=y
 CONFIG_NET_DSA_SJA1105_TAS=y
 CONFIG_NET_DSA_SJA1105_VL=y
 CONFIG_AMD_XGBE=y
-CONFIG_ATL1C=m
 CONFIG_BCMGENET=m
-CONFIG_BNX2X=m
 CONFIG_SYSTEMPORT=m
 CONFIG_MACB=y
-CONFIG_THUNDER_NIC_PF=y
 CONFIG_FEC=y
 CONFIG_FEC_UIO=y
 CONFIG_FSL_FMAN=y
@@ -308,27 +244,12 @@ CONFIG_FSL_DPAA_ETH=y
 CONFIG_FSL_DPAA2_ETH=y
 CONFIG_FSL_DPAA2_MAC=y
 CONFIG_FSL_DPAA2_SWITCH=y
-CONFIG_FSL_ENETC=y
-CONFIG_FSL_ENETC4=y
-CONFIG_FSL_ENETC_VF=y
+CONFIG_FSL_ENETC_IERB=y
 CONFIG_FSL_NETC_PRB_IERB=y
-CONFIG_FSL_ENETC_QOS=y
-CONFIG_FSL_NTMP=y
 CONFIG_HIX5HD2_GMAC=y
 CONFIG_HNS_DSAF=y
 CONFIG_HNS_ENET=y
-CONFIG_HNS3=y
-CONFIG_HNS3_HCLGE=y
-CONFIG_HNS3_ENET=y
-CONFIG_E1000=y
-CONFIG_E1000E=y
-CONFIG_IGB=y
-CONFIG_IGBVF=y
 CONFIG_MVMDIO=y
-CONFIG_SKY2=y
-CONFIG_MLX4_EN=m
-CONFIG_MLX5_CORE=m
-CONFIG_MLX5_CORE_EN=y
 CONFIG_MSCC_OCELOT_SWITCH=y
 CONFIG_QCOM_EMAC=m
 CONFIG_RMNET=m
@@ -371,24 +292,22 @@ CONFIG_USB_NET_PLUSB=m
 CONFIG_USB_NET_MCS7830=m
 CONFIG_USB_NET_CDC_SUBSET=m
 CONFIG_USB_NET_ZAURUS=m
-CONFIG_HOSTAP=y
-CONFIG_WL18XX=m
-CONFIG_WLCORE_SDIO=m
+# CONFIG_WLAN is not set
 CONFIG_XEN_NETDEV_BACKEND=m
-CONFIG_IVSHMEM_NET=y
+CONFIG_INPUT_MATRIXKMAP=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_ADC=m
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KEYBOARD_RPMSG=y
 CONFIG_KEYBOARD_SNVS_PWRKEY=y
 CONFIG_KEYBOARD_IMX_SC_KEY=y
-CONFIG_KEYBOARD_CROS_EC=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_BBNSM_PWRKEY=y
 CONFIG_INPUT_PWM_BEEPER=m
 CONFIG_INPUT_PWM_VIBRA=m
 # CONFIG_SERIO_SERPORT is not set
 CONFIG_SERIO_AMBAKMI=y
+CONFIG_VT_HW_CONSOLE_BINDING=y
 CONFIG_LEGACY_PTY_COUNT=16
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_CONSOLE=y
@@ -423,7 +342,6 @@ CONFIG_I2C_IMX=y
 CONFIG_I2C_IMX_LPI2C=y
 CONFIG_I2C_RK3X=y
 CONFIG_I2C_RPBUS=y
-CONFIG_I2C_CROS_EC_TUNNEL=y
 CONFIG_I2C_SLAVE_EEPROM=y
 CONFIG_I3C=y
 CONFIG_SVC_I3C_MASTER=y
@@ -475,11 +393,6 @@ CONFIG_POWER_RESET_BRCMSTB=y
 CONFIG_POWER_RESET_XGENE=y
 CONFIG_POWER_RESET_SYSCON=y
 CONFIG_SYSCON_REBOOT_MODE=y
-CONFIG_BATTERY_SBS=m
-CONFIG_BATTERY_BQ27XXX=y
-CONFIG_BATTERY_MAX17042=m
-CONFIG_CHARGER_BQ25890=m
-CONFIG_CHARGER_BQ25980=m
 CONFIG_SENSORS_ARM_SCMI=y
 CONFIG_SENSORS_ARM_SCPI=y
 CONFIG_SENSORS_FP9931=y
@@ -488,6 +401,7 @@ CONFIG_SENSORS_PWM_FAN=m
 CONFIG_SENSORS_SL28CPLD=m
 CONFIG_SENSORS_INA2XX=m
 CONFIG_SENSORS_INA3221=m
+CONFIG_THERMAL=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
 CONFIG_CPU_THERMAL=y
@@ -540,142 +454,13 @@ CONFIG_REGULATOR_QCOM_SPMI=y
 CONFIG_REGULATOR_S2MPS11=y
 CONFIG_REGULATOR_TPS65132=m
 CONFIG_REGULATOR_VCTRL=m
-CONFIG_RC_CORE=m
-CONFIG_RC_DECODERS=y
-CONFIG_IR_IMON_DECODER=m
-CONFIG_IR_JVC_DECODER=m
-CONFIG_IR_MCE_KBD_DECODER=m
-CONFIG_IR_NEC_DECODER=m
-CONFIG_IR_RC5_DECODER=m
-CONFIG_IR_RC6_DECODER=m
-CONFIG_IR_RCMM_DECODER=m
-CONFIG_IR_SANYO_DECODER=m
-CONFIG_IR_SHARP_DECODER=m
-CONFIG_IR_SONY_DECODER=m
-CONFIG_IR_XMP_DECODER=m
-CONFIG_RC_DEVICES=y
-CONFIG_IR_GPIO_CIR=m
 CONFIG_MEDIA_SUPPORT=y
-CONFIG_MEDIA_CAMERA_SUPPORT=y
-CONFIG_MEDIA_ANALOG_TV_SUPPORT=y
-CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
-CONFIG_MEDIA_SDR_SUPPORT=y
 CONFIG_MEDIA_PLATFORM_SUPPORT=y
-# CONFIG_DVB_NET is not set
 CONFIG_MEDIA_USB_SUPPORT=y
-CONFIG_USB_VIDEO_CLASS=m
-CONFIG_V4L_PLATFORM_DRIVERS=y
-CONFIG_SDR_PLATFORM_DRIVERS=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
-CONFIG_VIDEO_MX8_CAPTURE=y
-CONFIG_VIDEO_MXC_CAPTURE=y
-CONFIG_VIDEO_MXC_CSI_CAMERA=y
-CONFIG_MXC_MIPI_CSI=y
-CONFIG_MXC_CAMERA_OV5640_MIPI_V2=y
-CONFIG_VIDEO_AMPHION_VPU=y
-CONFIG_VIDEO_IMX_CSI_FORMATTER=y
-CONFIG_VIDEO_DWC_MIPI_CSIS=y
-CONFIG_VIDEO_IMX8_ISI=y
-CONFIG_VIDEO_IMX8_ISI_M2M=y
-CONFIG_VIDEO_IMX8_JPEG=m
-CONFIG_VIDEO_NXP_NEOISP=m
-CONFIG_VIDEO_HANTRO=m
-CONFIG_VIDEO_IMX219=m
-CONFIG_VIDEO_OV5640=y
-CONFIG_VIDEO_OV5645=m
-CONFIG_VIDEO_AP1302=y
-CONFIG_VIDEO_AP130X=m
-CONFIG_VIDEO_MT9M114=y
-CONFIG_VIDEO_OX03C10_DRV=m
-CONFIG_VIDEO_OX05B1S=m
-CONFIG_VIDEO_MAX96724=m
-CONFIG_VIDEO_MX95MBCAM=m
 CONFIG_VIDEO_DS90UB953=m
 CONFIG_VIDEO_DS90UB960=m
-CONFIG_IMX_DPU_CORE=y
-CONFIG_IMX8MM_LCDIF_CORE=y
-CONFIG_IMX_LCDIFV3_CORE=y
 CONFIG_DRM=y
-CONFIG_DRM_I2C_NXP_TDA998X=m
-CONFIG_DRM_MALI_DISPLAY=m
-CONFIG_DRM_NOUVEAU=m
-CONFIG_DRM_VIRTIO_GPU=y
-CONFIG_DRM_PANEL_BOE_TV101WUM_NL6=m
-CONFIG_DRM_PANEL_LVDS=y
-CONFIG_DRM_PANEL_SIMPLE=y
-CONFIG_DRM_PANEL_MANTIX_MLAF057WE51=m
-CONFIG_DRM_PANEL_RAYDIUM_RM67191=y
-CONFIG_DRM_PANEL_RAYDIUM_RM68200=y
-CONFIG_DRM_PANEL_RAYDIUM_RM692C9=y
-CONFIG_DRM_PANEL_ROCKTECK_HIMAX8394F=y
-CONFIG_DRM_PANEL_SEIKO_43WVF1G=y
-CONFIG_DRM_PANEL_SITRONIX_ST7703=m
-CONFIG_DRM_PANEL_TIANMA_TM050RDH03=y
-CONFIG_DRM_PANEL_TRULY_NT35597_WQXGA=m
-CONFIG_DRM_PANEL_WKS_101WX001=y
-CONFIG_DRM_DISPLAY_CONNECTOR=y
-CONFIG_DRM_LONTIUM_LT8912B=m
-CONFIG_DRM_LONTIUM_LT9611=m
-CONFIG_DRM_LONTIUM_LT9611UXC=y
-CONFIG_DRM_FSL_IMX_LVDS_BRIDGE=y
-CONFIG_DRM_MAX96752_LVDS=y
-CONFIG_DRM_MAX96789_DSI=y
-CONFIG_DRM_NWL_MIPI_DSI=y
-CONFIG_DRM_NXP_SEIKO_43WVFIG=y
-CONFIG_DRM_PARADE_PS8640=m
-CONFIG_DRM_SII902X=m
-CONFIG_DRM_SIMPLE_BRIDGE=m
-CONFIG_DRM_THINE_THC63LVD1024=m
-CONFIG_DRM_TI_SN65DSI83=y
-CONFIG_DRM_TI_SN65DSI86=m
-CONFIG_DRM_I2C_ADV7511=y
-CONFIG_DRM_I2C_ADV7511_AUDIO=y
-CONFIG_DRM_IMX95_LDB=y
-CONFIG_DRM_IMX95_MIPI_DSI=y
-CONFIG_DRM_IMX95_PIXEL_INTERLEAVER=y
-CONFIG_DRM_IMX95_PIXEL_LINK=y
-CONFIG_DRM_DW_HDMI_AHB_AUDIO=m
-CONFIG_DRM_DW_HDMI_I2S_AUDIO=m
-CONFIG_DRM_DW_HDMI_GP_AUDIO=y
-CONFIG_DRM_DW_HDMI_CEC=m
-CONFIG_DRM_ITE_IT6263=y
-CONFIG_DRM_ITE_IT6161=y
-CONFIG_DRM_IMX=y
-CONFIG_DRM_IMX_LCDIF_MUX_DISPLAY=y
-CONFIG_DRM_IMX_PARALLEL_DISPLAY=y
-CONFIG_DRM_IMX_TVE=y
-CONFIG_DRM_IMX_LDB=y
-CONFIG_DRM_IMX8QM_LDB=y
-CONFIG_DRM_IMX8QXP_LDB=y
-CONFIG_DRM_IMX8MP_LDB=y
-CONFIG_DRM_IMX93_LDB=y
-CONFIG_DRM_IMX_DW_MIPI_DSI=y
-CONFIG_DRM_IMX93_PARALLEL_DISPLAY_FORMAT=y
-CONFIG_DRM_IMX_HDMI=y
-CONFIG_DRM_IMX_SEC_DSIM=y
-CONFIG_DRM_IMX_DCNANO=y
-CONFIG_DRM_IMX95_DPU=y
-CONFIG_DRM_IMX_DCSS=y
-CONFIG_DRM_IMX_CDNS_MHDP=y
-CONFIG_DRM_ETNAVIV=m
-CONFIG_DRM_HISI_HIBMC=m
-CONFIG_DRM_HISI_KIRIN=m
-CONFIG_DRM_MXSFB=y
-CONFIG_DRM_PL111=m
-CONFIG_DRM_XEN_FRONTEND=y
-CONFIG_DRM_LIMA=m
-CONFIG_DRM_PANFROST=m
-CONFIG_FB=y
-CONFIG_FB_ARMCLCD=y
-CONFIG_FB_EFI=y
-CONFIG_FB_MXC_EINK_V2_PANEL=y
-CONFIG_BACKLIGHT_PWM=y
-CONFIG_BACKLIGHT_LP855X=m
-CONFIG_BACKLIGHT_GPIO=y
-CONFIG_BACKLIGHT_LED=y
-CONFIG_LOGO=y
-# CONFIG_LOGO_LINUX_MONO is not set
-# CONFIG_LOGO_LINUX_VGA16 is not set
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_ALOOP=m
@@ -702,8 +487,6 @@ CONFIG_SND_SOC_SOF_IMX8=m
 CONFIG_SND_SOC_SOF_IMX8M=m
 CONFIG_SND_SOC_SOF_IMX8ULP=m
 CONFIG_SND_SOC_AK4613=m
-CONFIG_SND_SOC_BT_SCO=y
-CONFIG_SND_SOC_CROS_EC_CODEC=m
 CONFIG_SND_SOC_CS42XX8_I2C=y
 CONFIG_SND_SOC_DMIC=m
 CONFIG_SND_SOC_ES7134=m
@@ -720,7 +503,6 @@ CONFIG_SND_SOC_SIMPLE_MUX=m
 CONFIG_SND_SOC_SPDIF=m
 CONFIG_SND_SOC_TAS571X=m
 CONFIG_SND_SOC_WCD934X=m
-CONFIG_SND_SOC_WM8524=y
 CONFIG_SND_SOC_WM8904=m
 CONFIG_SND_SOC_WM8960=m
 CONFIG_SND_SOC_WM8962=m
@@ -733,7 +515,6 @@ CONFIG_SND_SIMPLE_CARD=y
 CONFIG_SND_AUDIO_GRAPH_CARD=y
 CONFIG_SND_VIRTIO=y
 CONFIG_HID_MULTITOUCH=m
-CONFIG_I2C_HID_ACPI=m
 CONFIG_I2C_HID_OF=m
 CONFIG_USB_CONN_GPIO=y
 CONFIG_USB=y
@@ -810,7 +591,6 @@ CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_ARMMMCI=y
 CONFIG_MMC_SDHCI=y
-CONFIG_MMC_SDHCI_ACPI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_OF_ARASAN=y
 CONFIG_MMC_SDHCI_OF_ESDHC=y
@@ -835,6 +615,7 @@ CONFIG_LEDS_PCA963X=y
 CONFIG_LEDS_PCA995X=m
 CONFIG_LEDS_PWM=y
 CONFIG_LEDS_SYSCON=y
+CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_LEDS_TRIGGER_DISK=y
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
@@ -842,7 +623,6 @@ CONFIG_LEDS_TRIGGER_CPU=y
 CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_LEDS_TRIGGER_PANIC=y
 CONFIG_EDAC=y
-CONFIG_EDAC_GHES=y
 CONFIG_EDAC_LAYERSCAPE=m
 CONFIG_EDAC_SYNOPSYS=y
 CONFIG_RTC_CLASS=y
@@ -859,7 +639,6 @@ CONFIG_RTC_DRV_DS3232=y
 CONFIG_RTC_DRV_PCF2127=m
 CONFIG_RTC_DRV_PCF2131=m
 CONFIG_RTC_DRV_EFI=y
-CONFIG_RTC_DRV_CROS_EC=y
 CONFIG_RTC_DRV_FSL_FTM_ALARM=m
 CONFIG_RTC_DRV_PL031=y
 CONFIG_RTC_DRV_SNVS=y
@@ -879,8 +658,6 @@ CONFIG_MXC_PXP_V3=y
 CONFIG_PL330_DMA=y
 CONFIG_QCOM_HIDMA_MGMT=y
 CONFIG_QCOM_HIDMA=y
-CONFIG_DW_EDMA=y
-CONFIG_DW_EDMA_PCIE=y
 CONFIG_FSL_DPAA2_QDMA=m
 CONFIG_DMATEST=y
 CONFIG_UDMABUF=y
@@ -888,42 +665,29 @@ CONFIG_DMABUF_HEAPS=y
 CONFIG_DMABUF_HEAPS_SYSTEM=y
 CONFIG_DMABUF_HEAPS_CMA=y
 CONFIG_DMABUF_HEAPS_DSP=y
-CONFIG_UIO_PCI_GENERIC=y
-CONFIG_UIO_IVSHMEM=y
 CONFIG_VFIO=y
-CONFIG_VFIO_PCI=y
 CONFIG_VFIO_FSL_MC=y
-CONFIG_VIRTIO_PCI=y
 CONFIG_VIRTIO_BALLOON=y
 CONFIG_VIRTIO_INPUT=y
 CONFIG_VIRTIO_MMIO=y
-CONFIG_VIRTIO_IVSHMEM=y
 CONFIG_VHOST_NET=m
 CONFIG_VHOST_VSOCK=y
 CONFIG_XEN_GNTDEV=y
 CONFIG_XEN_GNTDEV_DMABUF=y
 CONFIG_XEN_GRANT_DEV_ALLOC=y
 CONFIG_XEN_GRANT_DMA_ALLOC=y
-CONFIG_XEN_PCIDEV_STUB=y
 CONFIG_XEN_PRIVCMD_IRQFD=y
 CONFIG_XEN_VIRTIO=y
 CONFIG_XEN_VIRTIO_FORCE_GRANT=y
 CONFIG_STAGING=y
 CONFIG_STAGING_MEDIA=y
-CONFIG_VIDEO_IMX_CAPTURE=y
-CONFIG_IMX8_MEDIA_DEVICE=m
-CONFIG_MHDP_HDMIRX=y
-CONFIG_MHDP_HDMIRX_CEC=y
+# CONFIG_DWC_MIPI_CSI2_HOST is not set
 CONFIG_FSL_DPAA2=y
 CONFIG_FSL_PPFE=y
 CONFIG_FSL_PPFE_UTIL_DISABLED=y
 CONFIG_ETHOSU=y
 CONFIG_NEUTRON=y
-CONFIG_CHROME_PLATFORMS=y
-CONFIG_CROS_EC=y
-CONFIG_CROS_EC_I2C=y
-CONFIG_CROS_EC_SPI=y
-CONFIG_CROS_EC_CHARDEV=m
+# CONFIG_SURFACE_PLATFORMS is not set
 CONFIG_CLK_VEXPRESS_OSC=y
 CONFIG_COMMON_CLK_SCMI=y
 CONFIG_COMMON_CLK_SCPI=y
@@ -967,7 +731,6 @@ CONFIG_FSL_QIXIS=y
 CONFIG_SOC_TI=y
 CONFIG_EXTCON_PTN5150=m
 CONFIG_EXTCON_USB_GPIO=y
-CONFIG_EXTCON_USBC_CROS_EC=y
 CONFIG_IIO=y
 CONFIG_FXLS8962AF_I2C=m
 CONFIG_IIO_ST_ACCEL_3AXIS=m
@@ -976,20 +739,16 @@ CONFIG_IMX93_ADC=y
 CONFIG_MAX9611=m
 CONFIG_QCOM_SPMI_VADC=m
 CONFIG_QCOM_SPMI_ADC5=m
-CONFIG_IIO_CROS_EC_SENSORS_CORE=m
-CONFIG_IIO_CROS_EC_SENSORS=m
 CONFIG_FXAS21002C=y
 CONFIG_IIO_ST_GYRO_3AXIS=m
 CONFIG_FXOS8700_I2C=y
 CONFIG_RPMSG_IIO_PEDOMETER=m
 CONFIG_INV_MPU6050_I2C=m
 CONFIG_IIO_ST_LSM6DSX=y
-CONFIG_IIO_CROS_EC_LIGHT_PROX=m
 CONFIG_SENSORS_ISL29018=y
 CONFIG_VCNL4000=m
 CONFIG_VCNL4035=m
 CONFIG_IIO_ST_MAGN_3AXIS=m
-CONFIG_IIO_CROS_EC_BARO=m
 CONFIG_MPL3115=y
 CONFIG_MS5611=m
 CONFIG_MS5611_I2C=m
@@ -997,7 +756,6 @@ CONFIG_IIO_P3T1085_I2C=m
 CONFIG_IIO_P3T1085_I3C=m
 CONFIG_PWM=y
 CONFIG_PWM_ADP5585=y
-CONFIG_PWM_CROS_EC=m
 CONFIG_PWM_FSL_FTM=m
 CONFIG_PWM_IMX27=y
 CONFIG_PWM_IMX_TPM=y
@@ -1026,26 +784,22 @@ CONFIG_ARM_DSU_PMU=m
 CONFIG_FSL_IMX8_DDR_PMU=y
 CONFIG_FSL_IMX9_DDR_PMU=y
 CONFIG_ARM_SPE_PMU=m
-CONFIG_ARM_DMC620_PMU=m
-CONFIG_HISI_PMU=y
 CONFIG_MALI_MIDGARD=y
 CONFIG_MALI_CSF_SUPPORT=y
 CONFIG_NVMEM_IMX_OCOTP=y
 CONFIG_NVMEM_IMX_OCOTP_SCU=y
 CONFIG_NVMEM_RMEM=m
-CONFIG_FPGA=y
-CONFIG_FPGA_BRIDGE=m
-CONFIG_ALTERA_FREEZE_BRIDGE=m
-CONFIG_FPGA_REGION=m
-CONFIG_OF_FPGA_REGION=m
 CONFIG_TEE=y
 CONFIG_OPTEE=y
 CONFIG_MUX_MMIO=y
 CONFIG_SLIM_QCOM_CTRL=m
 CONFIG_MXC_SIM=y
-CONFIG_MXC_GPU_VIV=y
 CONFIG_MXC_EMVSIM=y
-CONFIG_MXC_VIDEO_WAVE6=y
+# CONFIG_MXC_HANTRO is not set
+# CONFIG_MXC_HANTRO_845 is not set
+# CONFIG_MXC_HANTRO_845_H1 is not set
+# CONFIG_MXC_HANTRO_VC8000E is not set
+# CONFIG_MXC_HANTRO_V4L2 is not set
 CONFIG_EXT2_FS=y
 CONFIG_EXT3_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
@@ -1055,10 +809,9 @@ CONFIG_FANOTIFY=y
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_QUOTA=y
 CONFIG_AUTOFS_FS=y
-CONFIG_FUSE_FS=m
-CONFIG_CUSE=m
 CONFIG_OVERLAY_FS=m
 CONFIG_VFAT_FS=y
+CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_HUGETLBFS=y
 CONFIG_EFIVAR_FS=y
@@ -1066,12 +819,12 @@ CONFIG_JFFS2_FS=y
 CONFIG_UBIFS_FS=y
 CONFIG_SQUASHFS=y
 CONFIG_SQUASHFS_XZ=y
+CONFIG_PSTORE=y
 CONFIG_NFS_FS=y
 CONFIG_NFS_V4=y
 CONFIG_NFS_V4_1=y
 CONFIG_NFS_V4_2=y
 CONFIG_ROOT_NFS=y
-CONFIG_9P_FS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_TRUSTED_KEYS=m
@@ -1080,6 +833,10 @@ CONFIG_TRUSTED_KEYS=m
 CONFIG_SECURITY=y
 CONFIG_CRYPTO_USER=y
 CONFIG_CRYPTO_TEST=m
+CONFIG_CRYPTO_RSA=y
+CONFIG_CRYPTO_DH=m
+CONFIG_CRYPTO_ECDH=y
+CONFIG_CRYPTO_CURVE25519=m
 CONFIG_CRYPTO_ANUBIS=m
 CONFIG_CRYPTO_ARIA=m
 CONFIG_CRYPTO_BLOWFISH=m
@@ -1095,13 +852,17 @@ CONFIG_CRYPTO_TWOFISH=m
 CONFIG_CRYPTO_ARC4=m
 CONFIG_CRYPTO_CFB=m
 CONFIG_CRYPTO_CTS=m
+CONFIG_CRYPTO_ECB=y
 CONFIG_CRYPTO_LRW=m
 CONFIG_CRYPTO_OFB=m
 CONFIG_CRYPTO_PCBC=m
 CONFIG_CRYPTO_CHACHA20POLY1305=m
+CONFIG_CRYPTO_CCM=y
 CONFIG_CRYPTO_ECHAINIV=y
 CONFIG_CRYPTO_TLS=m
+CONFIG_CRYPTO_CMAC=y
 CONFIG_CRYPTO_MD4=m
+CONFIG_CRYPTO_MICHAEL_MIC=y
 CONFIG_CRYPTO_RMD160=m
 CONFIG_CRYPTO_STREEBOG=m
 CONFIG_CRYPTO_VMAC=m
@@ -1129,15 +890,18 @@ CONFIG_CRYPTO_DEV_FSL_CAAM=m
 CONFIG_CRYPTO_DEV_FSL_CAAM_SM_TEST=m
 CONFIG_CRYPTO_DEV_FSL_DPAA2_CAAM=m
 CONFIG_CRYPTO_DEV_CCREE=m
-CONFIG_CRYPTO_DEV_HISI_SEC2=m
-CONFIG_CRYPTO_DEV_HISI_ZIP=m
-CONFIG_CRYPTO_DEV_HISI_HPRE=m
-CONFIG_CRYPTO_DEV_HISI_TRNG=m
 CONFIG_CRYPTO_DEV_AMLOGIC_GXL=m
+CONFIG_ASYMMETRIC_KEY_TYPE=y
+CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
+CONFIG_X509_CERTIFICATE_PARSER=y
+CONFIG_PKCS7_MESSAGE_PARSER=y
+CONFIG_SYSTEM_TRUSTED_KEYRING=y
 CONFIG_INDIRECT_PIO=y
 CONFIG_CRC_CCITT=m
 CONFIG_CRC8=y
+CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=32
+CONFIG_IRQ_POLL=y
 CONFIG_PRINTK_TIME=y
 CONFIG_DEBUG_KERNEL=y
 CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT=y
