--- a/arch/arm64/configs/mt_connect_defconfig
+++ b/arch/arm64/configs/mt_connect_defconfig
@@ -166,6 +166,7 @@ CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 CONFIG_BRCMSTB_GISB_ARB=y
 CONFIG_VEXPRESS_CONFIG=y
+CONFIG_FSL_MC_BUS=y
 CONFIG_FSL_MC_UAPI_SUPPORT=y
 CONFIG_ARM_SCMI_PROTOCOL=y
 CONFIG_ARM_SCMI_POWER_CONTROL=y
@@ -362,7 +363,6 @@ CONFIG_SPI_SLAVE_TIME=y
 CONFIG_SPI_SLAVE_SYSTEM_CONTROL=y
 CONFIG_SPMI=y
 CONFIG_PPS_CLIENT_GPIO=y
-CONFIG_PINCTRL_MAX77620=y
 CONFIG_PINCTRL_SCMI=y
 CONFIG_PINCTRL_SINGLE=y
 CONFIG_PINCTRL_IMX8MM=y
@@ -375,30 +375,17 @@ CONFIG_PINCTRL_IMX8DXL=y
 CONFIG_PINCTRL_IMX8ULP=y
 CONFIG_PINCTRL_IMX93=y
 CONFIG_PINCTRL_S32V234=y
-CONFIG_GPIO_ALTERA=m
-CONFIG_GPIO_DWAPB=y
-CONFIG_GPIO_IMX_RPMSG=y
-CONFIG_GPIO_MB86S7X=y
-CONFIG_GPIO_MPC8XXX=y
+CONFIG_GPIO_GENERIC_PLATFORM=y
 CONFIG_GPIO_MXC=y
-CONFIG_GPIO_PL061=y
-CONFIG_GPIO_WCD934X=m
-CONFIG_GPIO_XGENE=y
-CONFIG_GPIO_MAX732X=y
-CONFIG_GPIO_ADP5585=y
-CONFIG_GPIO_BD9571MWV=m
-CONFIG_GPIO_MAX77620=y
-CONFIG_GPIO_SL28CPLD=m
+# CONFIG_GPIO_VF610 is not set
 CONFIG_POWER_RESET_BRCMSTB=y
 CONFIG_POWER_RESET_XGENE=y
 CONFIG_POWER_RESET_SYSCON=y
 CONFIG_SYSCON_REBOOT_MODE=y
 CONFIG_SENSORS_ARM_SCMI=y
 CONFIG_SENSORS_ARM_SCPI=y
-CONFIG_SENSORS_FP9931=y
 CONFIG_SENSORS_LM90=m
 CONFIG_SENSORS_PWM_FAN=m
-CONFIG_SENSORS_SL28CPLD=m
 CONFIG_SENSORS_INA2XX=m
 CONFIG_SENSORS_INA3221=m
 CONFIG_THERMAL=y
@@ -411,7 +398,6 @@ CONFIG_IMX8MM_THERMAL=y
 CONFIG_IMX91_THERMAL=y
 CONFIG_QORIQ_THERMAL=y
 CONFIG_WATCHDOG=y
-CONFIG_SL28CPLD_WATCHDOG=m
 CONFIG_ARM_SP805_WATCHDOG=y
 CONFIG_ARM_SBSA_WATCHDOG=y
 CONFIG_DW_WATCHDOG=y
@@ -420,40 +406,10 @@ CONFIG_IMX_SC_WDT=y
 CONFIG_IMX7ULP_WDT=y
 CONFIG_ARM_SMC_WATCHDOG=y
 CONFIG_XEN_WDT=y
-CONFIG_MFD_ADP5585=y
-CONFIG_MFD_BD9571MWV=y
-CONFIG_MFD_AXP20X_I2C=y
-CONFIG_MFD_IMX_FLEXIO=y
-CONFIG_MFD_HI6421_PMIC=y
-CONFIG_MFD_FP9931=y
-CONFIG_MFD_MAX77620=y
-CONFIG_MFD_MAX96752=y
-CONFIG_MFD_MAX96752_I2C=y
-CONFIG_MFD_MAX96789=y
-CONFIG_MFD_MAX96789_I2C=y
-CONFIG_MFD_MT6397=y
-CONFIG_MFD_SEC_CORE=y
-CONFIG_MFD_SL28CPLD=y
-CONFIG_MFD_WCD934X=m
+CONFIG_MFD_ROHM_BD718XX=y
+# CONFIG_MFD_VEXPRESS_SYSREG is not set
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_GPIO=y
-CONFIG_REGULATOR_HI6421V530=y
-CONFIG_REGULATOR_MAX77620=y
-CONFIG_REGULATOR_MAX8973=y
-CONFIG_REGULATOR_FP9931=y
-CONFIG_REGULATOR_MP8859=y
-CONFIG_REGULATOR_MT6358=y
-CONFIG_REGULATOR_MT6397=y
-CONFIG_REGULATOR_PCA9450=y
-CONFIG_REGULATOR_PF9453=y
-CONFIG_REGULATOR_PF0900=y
-CONFIG_REGULATOR_PF8X00=y
-CONFIG_REGULATOR_PFUZE100=y
-CONFIG_REGULATOR_PWM=y
-CONFIG_REGULATOR_QCOM_SPMI=y
-CONFIG_REGULATOR_S2MPS11=y
-CONFIG_REGULATOR_TPS65132=m
-CONFIG_REGULATOR_VCTRL=m
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_PLATFORM_SUPPORT=y
 CONFIG_MEDIA_USB_SUPPORT=y
@@ -470,14 +426,13 @@ CONFIG_SND_SOC_FSL_ASRC=m
 CONFIG_SND_SOC_FSL_MQS=m
 CONFIG_SND_SOC_FSL_MICFIL=m
 CONFIG_SND_SOC_FSL_EASRC=m
-CONFIG_SND_SOC_FSL_XCVR=m
-CONFIG_SND_SOC_FSL_RPMSG=m
 CONFIG_SND_IMX_SOC=m
 CONFIG_SND_SOC_IMX_SGTL5000=m
 CONFIG_SND_SOC_IMX_SPDIF=m
 CONFIG_SND_SOC_FSL_ASOC_CARD=m
 CONFIG_SND_SOC_IMX_AUDMIX=m
 CONFIG_SND_SOC_IMX_HDMI=m
+CONFIG_SND_SOC_IMX_RPMSG=m
 CONFIG_SND_SOC_IMX_CARD=m
 CONFIG_SND_SOC_IMX_PCM512X=m
 CONFIG_SND_SOC_SOF_TOPLEVEL=y
@@ -486,31 +441,7 @@ CONFIG_SND_SOC_SOF_IMX_TOPLEVEL=y
 CONFIG_SND_SOC_SOF_IMX8=m
 CONFIG_SND_SOC_SOF_IMX8M=m
 CONFIG_SND_SOC_SOF_IMX8ULP=m
-CONFIG_SND_SOC_AK4613=m
-CONFIG_SND_SOC_CS42XX8_I2C=y
-CONFIG_SND_SOC_DMIC=m
-CONFIG_SND_SOC_ES7134=m
-CONFIG_SND_SOC_ES7241=m
-CONFIG_SND_SOC_GTM601=m
-CONFIG_SND_SOC_MAX98357A=m
-CONFIG_SND_SOC_MAX98927=m
-CONFIG_SND_SOC_MSM8916_WCD_ANALOG=m
-CONFIG_SND_SOC_MSM8916_WCD_DIGITAL=m
-CONFIG_SND_SOC_PCM3168A_I2C=m
-CONFIG_SND_SOC_RT5659=m
-CONFIG_SND_SOC_SIMPLE_AMPLIFIER=m
-CONFIG_SND_SOC_SIMPLE_MUX=m
-CONFIG_SND_SOC_SPDIF=m
-CONFIG_SND_SOC_TAS571X=m
-CONFIG_SND_SOC_WCD934X=m
-CONFIG_SND_SOC_WM8904=m
-CONFIG_SND_SOC_WM8960=m
-CONFIG_SND_SOC_WM8962=m
-CONFIG_SND_SOC_WSA881X=m
-CONFIG_SND_SOC_RPMSG_WM8960=m
-CONFIG_SND_SOC_RPMSG_AK4497=m
-CONFIG_SND_SOC_LPASS_WSA_MACRO=m
-CONFIG_SND_SOC_LPASS_VA_MACRO=m
+CONFIG_SND_SOC_AK4458=y
 CONFIG_SND_SIMPLE_CARD=y
 CONFIG_SND_AUDIO_GRAPH_CARD=y
 CONFIG_SND_VIRTIO=y
@@ -628,13 +559,11 @@ CONFIG_EDAC_SYNOPSYS=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_DS1307=m
 CONFIG_RTC_DRV_HYM8563=m
-CONFIG_RTC_DRV_MAX77686=y
 CONFIG_RTC_DRV_PCF85363=m
 CONFIG_RTC_DRV_M41T80=m
 CONFIG_RTC_DRV_RX8581=m
 CONFIG_RTC_DRV_RV3028=m
 CONFIG_RTC_DRV_RV8803=m
-CONFIG_RTC_DRV_S5M=y
 CONFIG_RTC_DRV_DS3232=y
 CONFIG_RTC_DRV_PCF2127=m
 CONFIG_RTC_DRV_PCF2131=m
@@ -693,7 +622,6 @@ CONFIG_COMMON_CLK_SCMI=y
 CONFIG_COMMON_CLK_SCPI=y
 CONFIG_COMMON_CLK_CS2000_CP=y
 CONFIG_COMMON_CLK_FSL_SAI=y
-CONFIG_COMMON_CLK_S2MPS11=y
 CONFIG_COMMON_CLK_XGENE=y
 CONFIG_COMMON_CLK_PWM=y
 CONFIG_COMMON_CLK_VC5=y
@@ -755,13 +683,10 @@ CONFIG_MS5611_I2C=m
 CONFIG_IIO_P3T1085_I2C=m
 CONFIG_IIO_P3T1085_I3C=m
 CONFIG_PWM=y
-CONFIG_PWM_ADP5585=y
 CONFIG_PWM_FSL_FTM=m
 CONFIG_PWM_IMX27=y
 CONFIG_PWM_IMX_TPM=y
 CONFIG_PWM_RPCHIP=y
-CONFIG_PWM_SL28CPLD=m
-CONFIG_SL28CPLD_INTC=y
 CONFIG_RESET_IMX7=y
 CONFIG_RESET_IMX8ULP_SIM=y
 CONFIG_PHY_MIXEL_LVDS=y
@@ -794,6 +719,7 @@ CONFIG_OPTEE=y
 CONFIG_MUX_MMIO=y
 CONFIG_SLIM_QCOM_CTRL=m
 CONFIG_MXC_SIM=y
+CONFIG_MXC_GPU_VIV=y
 CONFIG_MXC_EMVSIM=y
 # CONFIG_MXC_HANTRO is not set
 # CONFIG_MXC_HANTRO_845 is not set
@@ -843,10 +769,12 @@ CONFIG_CRYPTO_BLOWFISH=m
 CONFIG_CRYPTO_CAMELLIA=m
 CONFIG_CRYPTO_CAST5=m
 CONFIG_CRYPTO_CAST6=m
+CONFIG_CRYPTO_DES=m
 CONFIG_CRYPTO_FCRYPT=m
 CONFIG_CRYPTO_KHAZAD=m
 CONFIG_CRYPTO_SEED=m
 CONFIG_CRYPTO_SERPENT=m
+CONFIG_CRYPTO_SM4_GENERIC=m
 CONFIG_CRYPTO_TEA=m
 CONFIG_CRYPTO_TWOFISH=m
 CONFIG_CRYPTO_ARC4=m
@@ -856,14 +784,17 @@ CONFIG_CRYPTO_ECB=y
 CONFIG_CRYPTO_LRW=m
 CONFIG_CRYPTO_OFB=m
 CONFIG_CRYPTO_PCBC=m
+CONFIG_CRYPTO_XTS=m
 CONFIG_CRYPTO_CHACHA20POLY1305=m
 CONFIG_CRYPTO_CCM=y
 CONFIG_CRYPTO_ECHAINIV=y
 CONFIG_CRYPTO_TLS=m
 CONFIG_CRYPTO_CMAC=y
 CONFIG_CRYPTO_MD4=m
+CONFIG_CRYPTO_MD5=m
 CONFIG_CRYPTO_MICHAEL_MIC=y
 CONFIG_CRYPTO_RMD160=m
+CONFIG_CRYPTO_SM3_GENERIC=m
 CONFIG_CRYPTO_STREEBOG=m
 CONFIG_CRYPTO_VMAC=m
 CONFIG_CRYPTO_WP512=m
@@ -885,12 +816,7 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_BS=m
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_CRCT10DIF_ARM64_CE=m
-CONFIG_CRYPTO_DEV_FSL_CAAM_SECVIO=m
-CONFIG_CRYPTO_DEV_FSL_CAAM=m
-CONFIG_CRYPTO_DEV_FSL_CAAM_SM_TEST=m
-CONFIG_CRYPTO_DEV_FSL_DPAA2_CAAM=m
-CONFIG_CRYPTO_DEV_CCREE=m
-CONFIG_CRYPTO_DEV_AMLOGIC_GXL=m
+# CONFIG_CRYPTO_HW is not set
 CONFIG_ASYMMETRIC_KEY_TYPE=y
 CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
 CONFIG_X509_CERTIFICATE_PARSER=y
