--- a/arch/arm64/configs/mt_connect_defconfig
+++ b/arch/arm64/configs/mt_connect_defconfig
@@ -47,8 +47,6 @@ CONFIG_XEN=y
 CONFIG_ARCH_FORCE_MAX_ORDER=13
 CONFIG_COMPAT=y
 CONFIG_RANDOMIZE_BASE=y
-CONFIG_PM_DEBUG=y
-CONFIG_PM_TEST_SUSPEND=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ENERGY_MODEL=y
 CONFIG_CPU_IDLE=y
@@ -366,14 +364,6 @@ CONFIG_PPS_CLIENT_GPIO=y
 CONFIG_PINCTRL_SCMI=y
 CONFIG_PINCTRL_SINGLE=y
 CONFIG_PINCTRL_IMX8MM=y
-CONFIG_PINCTRL_IMX8MN=y
-CONFIG_PINCTRL_IMX8MP=y
-CONFIG_PINCTRL_IMX8MQ=y
-CONFIG_PINCTRL_IMX8QM=y
-CONFIG_PINCTRL_IMX8QXP=y
-CONFIG_PINCTRL_IMX8DXL=y
-CONFIG_PINCTRL_IMX8ULP=y
-CONFIG_PINCTRL_IMX93=y
 CONFIG_PINCTRL_S32V234=y
 CONFIG_GPIO_GENERIC_PLATFORM=y
 CONFIG_GPIO_MXC=y
@@ -441,7 +431,6 @@ CONFIG_SND_SOC_SOF_IMX_TOPLEVEL=y
 CONFIG_SND_SOC_SOF_IMX8=m
 CONFIG_SND_SOC_SOF_IMX8M=m
 CONFIG_SND_SOC_SOF_IMX8ULP=m
-CONFIG_SND_SOC_AK4458=y
 CONFIG_SND_SIMPLE_CARD=y
 CONFIG_SND_AUDIO_GRAPH_CARD=y
 CONFIG_SND_VIRTIO=y
@@ -541,7 +530,7 @@ CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_CLASS_MULTICOLOR=m
 CONFIG_LEDS_LM3692X=m
-CONFIG_LEDS_GPIO=y
+CONFIG_LEDS_GPIO=m
 CONFIG_LEDS_PCA963X=y
 CONFIG_LEDS_PCA995X=m
 CONFIG_LEDS_PWM=y
