Audio dts update (#8)
* dts: mt-connect: remove ak4458

This driver it turns out is not compatible with the ak4432

* dts: mt-connect: explicitly conf HP_DAC_PDN and HP_DAC_I2C_FIL as gpios

* sound: codecs: add ak4432 driver

* dts: mt-connect: remove i2c2 to prevent skyworks breakage

* Revert "dts: mt-connect: remove i2c2 to prevent skyworks breakage"

This reverts commit 2ab301be4ab950f20101555533ee6131d2218581.

--- a/arch/arm64/boot/dts/freescale/mt-connect.dts
+++ b/arch/arm64/boot/dts/freescale/mt-connect.dts
@@ -25,29 +25,6 @@
 		reg = <0x0 0x40000000 0 0x80000000>;
 	};
 
-	ak4458_reset: gpio-reset {
-		compatible = "gpio-reset";
-		reset-gpios = <&gpio4 28 GPIO_ACTIVE_LOW>;
-		#reset-cells = <0>;
-		initially-in-reset;
-	};
-
-	sound-ak4458 {
-		compatible = "fsl,imx-audio-card";
-		model = "ak4458-audio";
-		pri-dai-link {
-			link-name = "akcodec";
-			format = "i2s";
-			fsl,mclk-equal-bclk;
-			cpu {
-				sound-dai = <&sai3>;
-			};
-			codec {
-				sound-dai = <&ak4458>;
-			};
-		};
-	};
-
 	reg_ldo_vcc: regulator-ldo-vcc {
 		compatible = "regulator-fixed";
 		regulator-name = "ldo_vcc_3v3";
@@ -297,15 +274,6 @@
 	sda-gpios = <&gpio5 17 GPIO_ACTIVE_HIGH>;
 	status = "okay";
 
-	ak4458: ak4458@10 {
-		#sound-dai-cells = <0>;
-		sound-name-prefix = "0";
-		compatible = "asahi-kasei,ak4458";
-		reg = <0x10>;
-		resets = <&ak4458_reset>;
-		AVDD-supply = <&reg_ldo_vcc>;
-		DVDD-supply = <&reg_ldo_vcc>;
-	};
 };
 
 &i2c4 {
@@ -529,6 +497,8 @@
 		MX8MM_IOMUXC_SAI3_TXC_SAI3_TX_BCLK		0xd6
 		MX8MM_IOMUXC_SAI3_MCLK_SAI3_MCLK		0xd6
 		MX8MM_IOMUXC_SAI3_TXD_SAI3_TX_DATA0		0xd6
+		MX8MM_IOMUXC_SAI3_RXFS_GPIO4_IO28		0x06 /* HP_DAC_PDN */
+		MX8MM_IOMUXC_SAI3_RXD_GPIO4_IO30		0x06 /* HP_DAC_I2C_FIL */
 		>;
 	};
 
