--- a/arch/arm64/configs/mt_connect_defconfig
+++ b/arch/arm64/configs/mt_connect_defconfig
@@ -500,6 +500,7 @@ CONFIG_USB_AUDIO=m
 CONFIG_USB_ETH=m
 CONFIG_USB_MASS_STORAGE=m
 CONFIG_USB_G_SERIAL=m
+CONFIG_USB_G_HID=y
 CONFIG_TYPEC=y
 CONFIG_TYPEC_TCPM=y
 CONFIG_TYPEC_TCPCI=y
