--- a/arch/arm64/configs/mt_connect_defconfig
+++ b/arch/arm64/configs/mt_connect_defconfig
@@ -500,7 +500,9 @@ CONFIG_USB_AUDIO=m
 CONFIG_USB_ETH=m
 CONFIG_USB_MASS_STORAGE=m
 CONFIG_USB_G_SERIAL=m
-CONFIG_USB_MIDI_GADGET=m
+CONFIG_USB_MIDI_GADGET=y
+CONFIG_USB_G_MULTI=m
+CONFIG_USB_G_MULTI_CDC=y
 CONFIG_USB_G_HID=y
 CONFIG_USB_RAW_GADGET=y
 CONFIG_TYPEC=y
