--- a/arch/arm64/configs/mt_connect_defconfig
+++ b/arch/arm64/configs/mt_connect_defconfig
@@ -503,8 +503,8 @@ CONFIG_USB_G_SERIAL=m
 CONFIG_USB_MIDI_GADGET=y
 CONFIG_USB_G_MULTI=m
 CONFIG_USB_G_MULTI_CDC=y
-CONFIG_USB_G_HID=y
-CONFIG_USB_RAW_GADGET=y
+CONFIG_USB_G_HID=m
+CONFIG_USB_RAW_GADGET=m
 CONFIG_TYPEC=y
 CONFIG_TYPEC_TCPM=y
 CONFIG_TYPEC_TCPCI=y
