--- a/arch/arm64/configs/mt_connect_defconfig
+++ b/arch/arm64/configs/mt_connect_defconfig
@@ -498,7 +498,7 @@ CONFIG_USB_CONFIGFS_F_UVC=y
 CONFIG_USB_ZERO=m
 CONFIG_USB_AUDIO=m
 CONFIG_USB_ETH=m
-CONFIG_USB_GADGETFS=y
+CONFIG_USB_GADGETFS=m
 CONFIG_USB_FUNCTIONFS=m
 CONFIG_USB_MASS_STORAGE=m
 CONFIG_USB_G_SERIAL=m
